@@ -186,11 +186,16 @@ static double __attribute__ ((unused)) feCoeff2x[9] =
 	 0.2568759660371100, -0.3225906481359000, 1.2568801238621801, 1.6774135096891700,
 	-0.2061764045745400, -1.0941543149527400, 2.0846376586498803, 2.1966597482716801};
 
-/* Coeffs for the 4x downsampling (16K system) filter */
+/* RCG V3.0 Coeffs for the 4x downsampling (16K system) filter */
 static double __attribute__ ((unused)) feCoeff4x[9] =
-	{0.014805052402446,  
-	0.7166258547451800, -0.0683289874517300, 0.3031629575762000, 0.5171469569032900,
-	0.6838596423885499, -0.2534855521841101, 1.6838609161411500, 1.7447155374502499};
+	{0.054285975,
+	 0.3890221, -0.17645085, -0.0417771600000001, 0.41775916,
+	 0.52191125, -0.37884382, 1.52190741336686, 1.69347541336686};
+
+// Pre RCG 3.0 filters
+//	{0.014805052402446,  
+//	0.7166258547451800, -0.0683289874517300, 0.3031629575762000, 0.5171469569032900,
+//	0.6838596423885499, -0.2534855521841101, 1.6838609161411500, 1.7447155374502499};
 
 //
 // New Brian Lantz 4k decimation filter
